--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Immersive Garden is a creative digital production company based in Paris">
     <link rel="apple-touch-icon" href="favicon.png" />
+    <meta property="og:title" content="Immersive Garden">
+    <meta property="og:site_name" content="Immersive Garden">
+    <meta property="og:description" content="Immersive Garden is a creative digital production company based in Paris">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="__immersive-g"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
